# copilot-Subscription-to-Public-Api

./: .env.example  .gitignore  Dockerfile.gateway  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: TOS.md  architecture.md  named-tunnel.md
scripts/: cloudflared-install.sh  install-systemd.sh  install.sh
src/c2p/: __init__.py  app.py  cli.py  keystore.py  runner.py
systemd/: c2p-copilot-api.service  c2p-gateway.service  c2p-tunnel.service  c2p.target
tests/: test_smoke.py
viewer/: index.html
