[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c2p"
version = "0.1.0"
description = "Expose a local copilot-api as a public OpenAI-compatible API with auth + logging"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
c2p = "c2p.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
